# SSound

./: .gitmodules  LICENSE  README.md  meson.build
examples/: meson.build
examples/src/: example.cpp
include/SSound/: AudioFile.h  Common.h  FileIO-inl.h  FileIO.h  IO.h  SIMDInstruction.h  SSound.h  SoundBuffer.h  SoundCommon.h  SoundDriver.h  SoundEffector.h  SoundFactory.h  SoundFileDescriptor.h  SoundObject.h  SoundSystem.h  Types.h  WavFileCreator.h
include/SSound/ALSA/: ALSADriver.h
include/SSound/CoreAudio/: CoreAudioDriver.h
include/SSound/MME/: MMEDriver.h
include/SSound/OpenSLES/: OpenSLESDriver.h
src/: AudioFile.cpp  Common.cpp  FileIO.cpp  SoundBuffer.cpp  SoundCommon.cpp  SoundDriver.cpp  SoundEffector.cpp  SoundFactory.cpp  SoundFileDescriptor.cpp  SoundObject.cpp  SoundSystem.cpp  WavFileCreator.cpp  meson.build
src/ALSA/: ALSADriver.cpp
src/CoreAudio/: CoreAudioDriver.mm
src/MME/: MMEDriver.cpp
src/OpenSLES/: OpenSLESDriver.cpp
